[project]
name = "plots"
version = "0.0.1"
description = "Aframe performance summary plots"
authors = [{ name = "Alec Gunny" }]
requires-python = ">=3.9,<3.13"
dependencies = [
    "bokeh~=3.0",
    "scipy~=1.7",
    "h5py~=3.5",
    "gwpy>=3.0.8,<4",
    "ledger",
    "priors",
    "utils",
    "aframe",
    "python-ligo-lw>=1.8.3,<2",
    "lalsuite~=7.19",
    "jsonargparse>=4.27.4,<5",
    "omegaconf~=2.2",
    "urllib3>=1.25.4,<1.27",
]

[project.scripts]
sensitive-volume = "plots.legacy.cli:main"
vizapp = "plots.vizapp.main:cli"

[dependency-groups]
dev = [
    "jupyter>=1.0.0,<2",
    "pytest>=8.3.0,<9",
]

[tool.uv]

[tool.uv.sources]
ledger = { path = "../../libs/ledger", editable = true }
priors = { path = "../../libs/priors", editable = true }
utils = { path = "../../libs/utils", editable = true }
aframe = { path = "../../", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
