[tool.poetry]
name = "train"
version = "0.1.0"
description = "Train aframe"
authors = [
    "Ethan Marx <ethan.marx@ligo.org>",
    "Alec Gunny <alecg@mit.edu>",
    "Will Benoit <benoit090@umn.edu>"
]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
train = "train.cli:main"

[tool.poetry.dependencies]
# core dependencies
python = ">=3.9,<3.13"
torchmetrics = "^0.11"
lightning = "2.2.1"
jsonargparse = {version = "^4.29", extras = ["signatures"]}

# plotting/logging dependencies
wandb = ">=0.15"
bokeh = "^3.0"

# hyperparameter search
ray = {version = "^2.8.0", extras = ["default", "tune"]}

# dependencies for s3 support. Should probably put these
# in their own group, but only including boto3 separately
# to restrict its version because the whl downloads during
# the solve were insanely slow
boto3 = "^1.30"
fsspec = {version = "^2024", extras=["s3"]}

# workaround for: https://github.com/python-poetry/poetry-plugin-export/issues/183
urllib3 = ">=1.25.4,<1.27"

# local deps
utils = {path = "../../libs/utils", develop = true}
ml4gw = ">=0.7.2"
aframe = {path = "../..", develop = true}
ledger = {path = "../../libs/ledger", develop = true}
architectures = {path = "../../libs/architectures", develop = true}

bayesian-optimization = "^1.4.3"
filelock = "^3.13.1"
s3fs = "^2024"
lightray = ">=0.2.3"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
