[project]
name = "train"
version = "0.1.0"
description = "Train aframe"
authors = [
    { name = "Ethan Marx", email = "ethan.marx@ligo.org" },
    { name = "Alec Gunny", email = "alecg@mit.edu" },
    { name = "Will Benoit", email = "benoit090@umn.edu" },
]
requires-python = ">=3.10,<3.13"
readme = "README.md"
license = "MIT"
dependencies = [
    "torchmetrics>=0.11,<0.12",
    "torch==2.5.0",
    "lightning==2.2.1",
    "jsonargparse[signatures]~=4.29",
    "wandb>=0.15",
    "bokeh~=3.0",
    "ray[default, tune]>=2.8.0,<3",
    "boto3~=1.30",
    "fsspec[s3]>=2024,<2025",
    "urllib3>=1.25.4,<1.27",
    "utils",
    "ml4gw>=0.7.2",
    "aframe",
    "ledger",
    "architectures",
    "bayesian-optimization>=1.4.3,<2",
    "filelock>=3.13.1,<4",
    "s3fs>=2024,<2025",
    "lightray>=0.2.3",
]

[project.scripts]
train = "train.cli:main"

[dependency-groups]
dev = ["pytest~=7.3"]

[tool.uv]

[[tool.uv.index]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
utils = { path = "../../libs/utils", editable = true }
aframe = { path = "../..", editable = true }
ledger = { path = "../../libs/ledger", editable = true }
architectures = { path = "../../libs/architectures", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
