[tool.poetry]
name = "utils"
description = "aframe utilities library"
version = "0.0.1"
authors = ["Alec Gunny"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
h5py = "^3.6"

# general plotting and interactive analysis deps
bokeh = "^3.0"
jupyter = "^1.0"

# make preprocessing modules here for use in
# both validation and inference export
ml4gw = {path = "../../ml4gw", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.3"

# by default use CPU-only torch, but this can
# be overridden by specifying a different source
# repo in downstream projects
[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
