[tool.poetry]
name = "datagen"
version = "0.0.1"
description = "Dataset generation utilities"
authors = [
    "Ethan Marx <emarx@mit.edu>",
    "Will Benoit <william.benoit@ligo.org>",
    "Alec Gunny <alecg@mit.edu>"
]
license = "MIT"

[tool.poetry.scripts]
generate-background = "datagen.scripts.background:main"
generate-glitches = "datagen.scripts.glitches:main"
generate-waveforms = "datagen.scripts.waveforms:main"
generate-timeslide-waveforms = "datagen.scripts.timeslide_waveforms:main"
deploy-timeslide-waveforms = "datagen.scripts.timeslide_waveforms:deploy"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"

typeo = {git = "https://github.com/ML4GW/typeo.git", branch = "main"}
torch = {version = "^1.10", source = "torch"}
ml4gw = {path = "../../../ml4gw", develop = true}
mldatafind = {git = "https://github.com/ML4GW/mldatafind.git", branch = "main"}

"aframe.analysis" = {path = "../../../libs/analysis", develop = true}
"aframe.deploy" = {path = "../../../libs/deploy", develop = true}
"aframe.io" = {path = "../../../libs/io", develop = true}
"aframe.logging" = {path = "../../../libs/logging", develop = true}
"aframe.priors" = {path = "../../../libs/priors", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.3"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"

[build-system]
requires = ["poetry>=1.2"]
build-backend = "poetry.masonry.api"
