[tool.poetry]
name = "datagen"
version = "0.0.1"
description = "Dataset generation utilities"
authors = [
    "Ethan Marx <emarx@mit.edu>",
    "Will Benoit <william.benoit@ligo.org>",
    "Alec Gunny <alecg@mit.edu>"
]
license = "MIT"

[tool.poetry.scripts]
generate-background = "datagen.scripts.background:main"
deploy-background = "datagen.scripts.background:deploy"
generate-glitches = "datagen.scripts.glitches:main"
generate-waveforms = "datagen.scripts.waveforms:main"
generate-timeslide-waveforms = "datagen.scripts.timeslide_waveforms:main"
deploy-timeslide-waveforms = "datagen.scripts.timeslide_waveforms:deploy"

[tool.pinto]
conda = {append_base_ld_library_path = true}

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
bilby = "^1.4"
gwosc = "<0.7"
gwpy = "^2.1"
h5py = "^3.9.0"
lalsuite = "7.19"
matplotlib = "<3.8.0"
pyomicron = "^2.0.5"

typeo = {git = "https://github.com/ML4GW/typeo.git", branch = "main"}
torch = {version = "^1.10", source = "torch"}
ml4gw = {path = "../../../ml4gw", develop = true}
mldatafind = {path = "../../../mldatafind", develop = true}

"aframe.analysis" = {path = "../../../libs/analysis", develop = true}
"aframe.deploy" = {path = "../../../libs/deploy", develop = true}
"aframe.logging" = {path = "../../../libs/logging", develop = true}
"aframe.priors" = {path = "../../../libs/priors", develop = true}
"aframe.utils" = {path = "../../../libs/utils", develop = true}
"dqsegdb2" = "<1.2.0" # pyomicron incompatibility

[tool.poetry.group.dev.dependencies]
pytest = "^7.3"
jupyter = "^1.0.0"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"

[build-system]
requires = ["poetry>=1.2"]
build-backend = "poetry.masonry.api"
